// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Hero Default 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
      Object {
        "height": 533.6,
      },
    ]
  }
>
  <Image
    height={533.6}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2Fmobile%2Fraw%2Fcoorp_logo_infinite-1552063832916.png&m=crop&q=90&w=640&h=1067",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
    testID="image-background"
    width={320}
  />
  <BVLinearGradient
    colors={
      Array [
        0,
        1711276032,
        3003121664,
        4278190080,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Array [
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "justifyContent": "flex-end",
            "padding": 24,
          },
        ],
        undefined,
      ]
    }
    testID="image-background-gradient"
  >
    <View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "justifyContent": "center",
              },
              Object {
                "height": undefined,
              },
              undefined,
            ]
          }
        >
          <View
            noMargin={true}
            style={
              Array [
                Object {
                  "borderRadius": 0,
                },
                Object {
                  "height": 5,
                },
                Object {
                  "backgroundColor": "#CFD8DC",
                },
              ]
            }
            width="40%"
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </BVLinearGradient>
</View>
`;

exports[`Storyshots Hero With user 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
      Object {
        "height": 533.6,
      },
    ]
  }
>
  <Image
    height={533.6}
    resizeMode="cover"
    source={
      Object {
        "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2Fmobile%2Fraw%2Fcoorp_logo_infinite-1552063832916.png&m=crop&q=90&w=640&h=1067",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
    testID="image-background"
    width={320}
  />
  <BVLinearGradient
    colors={
      Array [
        0,
        1711276032,
        3003121664,
        4278190080,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Array [
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "justifyContent": "flex-end",
            "padding": 24,
          },
        ],
        undefined,
      ]
    }
    testID="image-background-gradient"
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 28,
          "fontWeight": "700",
        }
      }
    >
      Welcome, Pol P.!
    </Text>
  </BVLinearGradient>
</View>
`;
